(not released yet)

- Added lexers:

  * GAP session (#2211)
  * Fift (#2249)
  * func (#2232)
  * Jsonnet (#2239)
  * MIPS (#2228)
  * Phix (#2222)
  * TL-b (#2247)
  * World of Warcraft TOC format (#2244)

- Updated lexers:

  * C family (C, C++ and many others): fix an issue where a chunk would
    be wrongly recognized as a function definition due to braces in
    comments (#2210)
  * gas (GNU assembler): recognize braces as punctuation (#2230)
  * HTTP: add `CONNECT` keyword
  * Inform 6: fix lexing of properties and doubles (#2214)
  * INI: allow comments that are not their own line (#2217)
  * Java properties: fix issue with whitespace-delimited keys, support
    comments starting with `!` and escapes, no longer support undocumented
    `;` and `//` comments (#2241)
  * Nim: general improvements (#1970)
  * Objective J: fix catastrophic backtracking (#2225)
  * NASM: add support for SSE/AVX/AVX-512 registers as well as 'rel'
    and 'abs' address operators (#2212)
  * Powershell: add `local:` keyword (#2254)
  * Python: add `*.pyi` as filename pattern for typing stub files (#2231)
  * Spice: add ``enum`` keyword and fix a bug regarding binary,
    hexadecimal and octal number tokens (#2227)

- Fix `make mapfiles` when Pygments is not installed in editable mode
  (#2223)

- Support more filetypes and compression types in `autopygmentize` (#2219)
- Merge consecutive tokens in Autohotkey, Clay (#2248)

Version 2.13.0
--------------
(released August 15th, 2022)

- Added lexers:

  * COMAL-80 (#2180)
  * JMESPath (#2174, #2175, #2179, #2182)
  * Sql+Jinja (#2148)

- Updated lexers:

  * Ada: support Ada 2022 (#2121); disable recognition of namespaces
    because it disturbs lexing of aspects (#2125)
  * Agda: allow straight quotes in module names (#2163)
  * C family (C, C++ and many others): allow comments between
    elements of function headers, e.g. between the arguments and
    the opening brace for the body (#1891)