@@ -3,7 +3,7 @@
 'Page'        Name
 ' '           Text.Whitespace
 'Language'    Name
-'='           Punctuation
+'='           Operator
 '"C#"'        Literal.String
 ' '           Text.Whitespace
 '%>'          Name.Tag
@@ -49,7 +49,7 @@
 '.'           Punctuation
 'Text'        Name
 ' '           Text.Whitespace
-'='           Punctuation
+'='           Operator
 ' '           Text.Whitespace
 'DateTime'    Name
 '.'           Punctuation
