@@ -23,6 +23,7 @@ Version 2.14.0
   * C family (C, C++ and many others): fix an issue where a chunk would
     be wrongly recognized as a function definition due to braces in
     comments (#2210)
+  * C#: fix number and operator recognition (#2257)
   * gas (GNU assembler): recognize braces as punctuation (#2230)
   * HTTP: add `CONNECT` keyword
   * Inform 6: fix lexing of properties and doubles (#2214)
